--- a/iProject.html
+++ b/iProject.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-orange: #E27D60;
+<!-- orange: #E27D60;
 blue: #85DCB;
 tan: #E8A87C;
 pink: #C38D9E;
-teal: #41B3A3;
+teal: #41B3A3; -->
 
 <html>
 <head>
@@ -14,11 +14,10 @@ body {
   text-align: center;
   color:#85DCB;
 }
-a{
-	background-color:#C38D9E;
+form{
 	color: white;
 	border-radius: 50%;
-	padding: 32px 16px;
+	padding:20px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
@@ -26,11 +25,12 @@ a{
 	margin: 4px 2px;
 	cursor: pointer;
 }
-a:active {
+form:active {
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
-a:hover{
+form:hover{
+	background-color: #C38D9E;
 	opacity: 0.6;
 	opacity: 1;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 
@@ -39,46 +39,66 @@ a:hover{
 .growing{
 	position: absolute;
 	center: 25px;
-	bottom: 400px;
+	left:30px;
+	bottom: 300px;
 }
 .living{
 	position: absolute;
 	right: 25px;
-	bottom: 50px;
+	bottom: 0px;
 }
 .accomp{
 	border-radius: 50%;
 	position: absolute;
 	left: 25px;
-	bottom: 50px;
+	bottom: 0px;
 }
 .learning{
 	position: absolute;
-	right: 25px;
-	top: 50px;
+	right: 15px;
+	top: 0px;
 }
 .photo{
 	position: absolute;
 	center: 25px;
-	bottom: 50px;
+	right:30px
+	bottom: 300px;
 }
 .birth{
 	position: absolute;
-	left: 25px;
-	top: 50px;
+	left: 15px;
+	top: 0px;
 }
 </style>
 </head>
 <body>
-<a href="file:///H:/User%20Interface%20Design/growing.html" class="button growing" >Growing</a>
-<a href="file:///H:/User%20Interface%20Design/living.html" class="button living" >Living</a>
-<a href="file:///H:/User%20Interface%20Design/Acc.html" class="button accomp" >Accomplishments</a>
-<a href="file:///H:/User%20Interface%20Design/learning.html" class="button learning" >Learning</a>
-<a href="file:///H:/User%20Interface%20Design/photo.html" class="button photo" >Photos</a>
-<a href="file:///H:/User%20Interface%20Design/Birth.html" class="button birth" >Birth</a>
+<form class="living" action="living.html">
+  <input type="image" src="memoji.png" alt="Submit" width="250" height="250">
+  living
+</form>
+<form class="growing" action="growing.html">
+  <input type="image" src="memoji2.png" alt="Submit" width="250" height="250">
+  <p>growing</p>
+</form>
+<form class="accomp" action="Acc.html">
+  <input type="image" src="memoji3.png" alt="Submit" width="250" height="250">
+  <p>accomplishments</p>
+</form>
+<form class="learning" action="learning.html">
+  <input type="image" src="memoji4.png" alt="Submit" width="250" height="250">
+  learning
+</form>
+<form class="photo" action="photo.html">
+  <input type="image" src="memoji5.png" alt="Submit" width="250" height="250">
+  photos
+</form>
+<form class="birth" action="Birth.html">
+  <input type="image" src="memoji6.png" alt="Submit" width="250" height="250">
+  <p>birth</p>
+</form>
 <h1>Welcome to Xyquirreah Fairley life!</h1>
 <p>Click on any attribute.</p>
-<img src="image.jpg" alt="Memoji" style="width:350px">
+<img src="image.jpg" alt="photo" style="width:350px">
 
 </body>
 </html>
