--- a/Birth.html
+++ b/Birth.html
@@ -43,12 +43,17 @@ p{
   left: 200px;
   top: 150px;
 }
-.p4{
+div{
+	background-color:#41B3A3;
+	width: 300px;
+	border: 5px dotted #E8A87C;
+	padding:5px;
+	margin:20px;
 	position: absolute;
   left: 100px;
   top: 150px;
 }
-button {
+form {
 	background-color:#C38D9E;
 	color: white;
 	border-radius: 50%;
@@ -63,11 +68,11 @@ button {
   margin: 4px 2px;
   cursor: pointer;
 }
-button:active {
+form:active {
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
-button:hover{
+form:hover{
 	opacity: 0.6;
 	opacity: 1;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
@@ -106,9 +111,13 @@ There I actually got to know the rest of my sibilings.
 <p>I have three sisters and two twin brothers that are all older then me.<br>
 
 </p>
+<p></p>
 https://twitter.com/i/status/899688824825159680
 <img src="birthphoto.jpg" alt="gif" style="width:300px">
-<button href="" class="button" >Growing</button>
-<a href="file:///H:/User%20Interface%20Design/iProject.html" class="previous round">&#8249;</a>
+<form class="growing" action="growing.html">
+  <input type="image" src="memoji2.png" alt="Submit" width="250" height="250">
+  <div>growing</div>
+</form>
+<a href="iProject.html" class="previous round">&#8249;</a>
 </body>
 </html>
