--- a/iProject.html
+++ b/iProject.html
@@ -31,6 +31,7 @@ form:active {
 }
 form:hover{
 	background-color: #C38D9E;
+	border-radius: 50%;
 	opacity: 0.6;
 	opacity: 1;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 
@@ -39,7 +40,7 @@ form:hover{
 .growing{
 	position: absolute;
 	center: 25px;
-	left:30px;
+	left:25px;
 	bottom: 300px;
 }
 .living{
@@ -61,12 +62,12 @@ form:hover{
 .photo{
 	position: absolute;
 	center: 25px;
-	right:30px
-	bottom: 300px;
+	right: 25px
+	bottom:300px;
 }
 .birth{
 	position: absolute;
-	left: 15px;
+	left: 25px;
 	top: 0px;
 }
 </style>
@@ -74,7 +75,7 @@ form:hover{
 <body>
 <form class="living" action="living.html">
   <input type="image" src="memoji.png" alt="Submit" width="250" height="250">
-  living
+  <p>living</p>
 </form>
 <form class="growing" action="growing.html">
   <input type="image" src="memoji2.png" alt="Submit" width="250" height="250">
@@ -86,16 +87,17 @@ form:hover{
 </form>
 <form class="learning" action="learning.html">
   <input type="image" src="memoji4.png" alt="Submit" width="250" height="250">
-  learning
+  <p>learning</p>
 </form>
 <form class="photo" action="photo.html">
   <input type="image" src="memoji5.png" alt="Submit" width="250" height="250">
-  photos
+  <p>photo</p>
 </form>
 <form class="birth" action="Birth.html">
   <input type="image" src="memoji6.png" alt="Submit" width="250" height="250">
   <p>birth</p>
 </form>
+
 <h1>Welcome to Xyquirreah Fairley life!</h1>
 <p>Click on any attribute.</p>
 <img src="image.jpg" alt="photo" style="width:350px">
