--- a/Birth.html
+++ b/Birth.html
@@ -44,14 +44,14 @@ p{
   top: 150px;
 }
 div{
-	background-color:#41B3A3;
-	width: 300px;
-	border: 5px dotted #E8A87C;
+	background-color:transparent;
+	width: 100px;
+	<!-- border: 5px dotted #E8A87C; -->
 	padding:5px;
 	margin:20px;
 	position: absolute;
-  left: 100px;
-  top: 150px;
+  left: 60px;
+  top: 250px;
 }
 form {
 	background-color:#C38D9E;
@@ -116,7 +116,15 @@ https://twitter.com/i/status/899688824825159680
 <img src="birthphoto.jpg" alt="gif" style="width:300px">
 <form class="growing" action="growing.html">
   <input type="image" src="memoji2.png" alt="Submit" width="250" height="250">
-  <div>growing</div>
+<!-- <svg viewBox="0 0 500 500"> -->
+  <!-- <path id="curve" fill="transparent" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" /> -->
+  <!-- <text width="500" size="32px"> -->
+    <!-- <textPath xlink:href="#curve"> -->
+      <!-- Growing -->
+    <!-- </textPath> -->
+  <!-- </text> -->
+<!-- </svg> -->
+ <!-- <div>growing</div> -->
 </form>
 <a href="iProject.html" class="previous round">&#8249;</a>
 </body>
