--- a/iProject.html
+++ b/iProject.html
@@ -37,38 +37,42 @@ form:hover{
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 
 	0 17px 50px 0 rgba(0,0,0,0.19);
 }
-.growing{
-	position: absolute;
-	center: 25px;
-	left:25px;
-	bottom: 300px;
-}
-.living{
-	position: absolute;
-	right: 25px;
-	bottom: 0px;
-}
-.accomp{
-	border-radius: 50%;
-	position: absolute;
-	left: 25px;
-	bottom: 0px;
-}
-.learning{
-	position: absolute;
-	right: 15px;
-	top: 0px;
-}
-.photo{
-	position: absolute;
-	center: 25px;
-	right: 25px
-	bottom:300px;
-}
-.birth{
-	position: absolute;
-	left: 25px;
-	top: 0px;
+	.accomp{
+		position: absolute;
+		left: 25px;
+		bottom: 0px;
+	}
+	.growing{
+		position: absolute;
+		center: 25px;
+		left: 25px;
+		bottom: 280px;
+	}
+	.birth{
+		position: absolute;
+		left: 25px;
+		top: 0px;
+	}
+	.living{
+		position: absolute;
+		right: 25px;
+		bottom: 0px;
+	}
+	.photo{
+		position: absolute;
+		 center: 25px;
+		right: 25px; 
+		bottom:250px;
+	}
+	.learning{
+		position: absolute;
+		right: 15px;
+		top: 0px;
+	}
+p{
+	color: white;
+	
+
 }
 </style>
 </head>
