--- a/iProject.html
+++ b/iProject.html
@@ -69,37 +69,41 @@ form:hover{
 		right: 15px;
 		top: 0px;
 	}
-p{
-	color: white;
-	
-
+div{
+	background-color:transparent;
+	color:white;
+	width: 100px;
+	border: 5px dotted #85DCB;
+	padding:5px;
+	margin:20px;
+	position: absolute;
 }
 </style>
 </head>
 <body>
 <form class="living" action="living.html">
   <input type="image" src="memoji.png" alt="Submit" width="250" height="250">
-  <p>living</p>
+  <div>living</div>
 </form>
 <form class="growing" action="growing.html">
   <input type="image" src="memoji2.png" alt="Submit" width="250" height="250">
-  <p>growing</p>
+  <div>growing</div>
 </form>
 <form class="accomp" action="Acc.html">
   <input type="image" src="memoji3.png" alt="Submit" width="250" height="250">
-  <p>accomplishments</p>
+  <div>accomplishments</div>
 </form>
 <form class="learning" action="learning.html">
   <input type="image" src="memoji4.png" alt="Submit" width="250" height="250">
-  <p>learning</p>
+  <div>learning</div>
 </form>
 <form class="photo" action="photo.html">
   <input type="image" src="memoji5.png" alt="Submit" width="250" height="250">
-  <p>photo</p>
+  <div>photo</div>
 </form>
 <form class="birth" action="Birth.html">
   <input type="image" src="memoji6.png" alt="Submit" width="250" height="250">
-  <p>birth</p>
+  <div>birth</div>
 </form>
 
 <h1>Welcome to Xyquirreah Fairley life!</h1>
