--- a/Birth.html
+++ b/Birth.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-/* Colors:
-orange: #E27D60
-blue: #85DCB 
-tan: #E8A87C
-pink: #C38D9E
-background-color: teal: #41B3A3
-"https://twitter.com/i/status/899688824825159680"*\
+<!-- Colors: -->
+<!-- orange: #E27D60 -->
+<!-- blue: #85DCB  -->
+<!-- tan: #E8A87C -->
+<!-- pink: #C38D9E -->
+<!-- background-color: teal: #41B3A3 -->
+<!-- "https://twitter.com/i/status/899688824825159680" -->
 <html>
 <head>
 <title>Xyquirreah Fairley</title>
@@ -96,8 +96,16 @@ a:hover {
 .round {
   border-radius: 50%;
 }
-</style>
+li {   
+	list-style: none;
+} 
 
+</style>
+<script src="circletype.min.js">
+ demo3{
+ new CircleType(document.getElementById('demo3'));
+ }
+</script>
 <body>
 <h1> It takes a village to raise a child!</h1>
 <p>I was born on the 9th of August in 1999, in Mobile, Alabama, USA.<br>
@@ -112,19 +120,18 @@ There I actually got to know the rest of my sibilings.
 
 </p>
 <p></p>
-https://twitter.com/i/status/899688824825159680
-<img src="birthphoto.jpg" alt="gif" style="width:300px">
+<img src="" alt="gif" style="width:300px">
 <form class="growing" action="growing.html">
   <input type="image" src="memoji2.png" alt="Submit" width="250" height="250">
-<!-- <svg viewBox="0 0 500 500"> -->
-  <!-- <path id="curve" fill="transparent" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" /> -->
-  <!-- <text width="500" size="32px"> -->
-    <!-- <textPath xlink:href="#curve"> -->
-      <!-- Growing -->
-    <!-- </textPath> -->
-  <!-- </text> -->
-<!-- </svg> -->
- <!-- <div>growing</div> -->
+  <li id='Growing'>
+                     <span class='w0'>G</span>
+					 <span class='w1'>R</span>
+					 <span class='w2'>O</span>
+					 <span class='w3'>W</span>
+					 <span class='w4'>I</span>
+					 <span class='w5'>N</span>
+					 <span class='w6'>G</span>
+              </li>
 </form>
 <a href="iProject.html" class="previous round">&#8249;</a>
 </body>
