--- a/iProject.html
+++ b/iProject.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <!-- orange: #E27D60;
 blue: #85DCB;
-tan: #E8A87C;
+soft orange (tan): #E8A87C;
 pink: #C38D9E;
 teal: #41B3A3; -->
 
 <html>
-<head>
-<title>Xyquirreah Fairley</title>
+
 <style>
 body {
   background-color: #E8A87C;
@@ -17,7 +16,7 @@ body {
 form{
 	color: white;
 	border-radius: 50%;
-	padding:20px;
+	padding:0px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
@@ -32,6 +31,8 @@ form:active {
 form:hover{
 	background-color: #C38D9E;
 	border-radius: 50%;
+	height: 300px;
+	width: 300px;
 	opacity: 0.6;
 	opacity: 1;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 
@@ -69,46 +70,101 @@ form:hover{
 		right: 15px;
 		top: 0px;
 	}
-div{
-	background-color:transparent;
-	color:white;
-	width: 100px;
-	border: 5px dotted #85DCB;
-	padding:5px;
-	margin:20px;
-	position: absolute;
-}
+li {   
+	list-style: none;
+} 
 </style>
-</head>
-<body>
-<form class="living" action="living.html">
-  <input type="image" src="memoji.png" alt="Submit" width="250" height="250">
-  <div>living</div>
-</form>
-<form class="growing" action="growing.html">
-  <input type="image" src="memoji2.png" alt="Submit" width="250" height="250">
-  <div>growing</div>
-</form>
-<form class="accomp" action="Acc.html">
-  <input type="image" src="memoji3.png" alt="Submit" width="250" height="250">
-  <div>accomplishments</div>
-</form>
-<form class="learning" action="learning.html">
-  <input type="image" src="memoji4.png" alt="Submit" width="250" height="250">
-  <div>learning</div>
-</form>
-<form class="photo" action="photo.html">
-  <input type="image" src="memoji5.png" alt="Submit" width="250" height="250">
-  <div>photo</div>
-</form>
-<form class="birth" action="Birth.html">
-  <input type="image" src="memoji6.png" alt="Submit" width="250" height="250">
-  <div>birth</div>
-</form>
+	<head >
+		
+		
+	<audio controls autoplay> 
+		<source src="file:///H:/User%20Interface%20Design/In.Project/Tyler_The_Creator_-_Earfquake_talkglitz.tv.mp3" type="audio/mp3">
 
-<h1>Welcome to Xyquirreah Fairley life!</h1>
-<p>Click on any attribute.</p>
-<img src="image.jpg" alt="photo" style="width:350px">
-
-</body>
-</html>
+		</audio>
+		
+		<link rel="shortcut icon" href="memoji.ico" type="image/x-icon"/>
+		<title>Xyquirreah Fairley</title>
+	</head>
+	<body>
+	<form class="living" action="living.html">
+	  <input type="image" src="memoji.png" alt="Submit" width="250" height="250">
+	  <li id='Living'>
+						 <span class='w0'>L</span>
+						 <span class='w1'>I</span>
+						 <span class='w2'>V</span>
+						 <span class='w3'>I</span>
+						 <span class='w4'>N</span>
+						 <span class='w5'>G</span>
+				  </li>
+	</form>
+	<form class="growing" action="growing.html">
+	  <input type="image" src="memoji2.png" alt="Submit" width="250" height="250">
+	  <li id='Growing'>
+						 <span class='w0'>G</span>
+						 <span class='w1'>R</span>
+						 <span class='w2'>O</span>
+						 <span class='w3'>W</span>
+						 <span class='w4'>I</span>
+						 <span class='w5'>N</span>
+						 <span class='w6'>G</span>
+				  </li>
+	</form>
+	<form class="accomp" action="Acc.html">
+	  <input type="image" src="memoji3.png" alt="Submit" width="250" height="250">
+	  <li id='Accomplishments'>
+						 <span class='w0'>A</span>
+						 <span class='w1'>C</span>
+						 <span class='w2'>C</span>
+						 <span class='w3'>O</span>
+						 <span class='w4'>M</span>
+						 <span class='w5'>P</span>
+						 <span class='w6'>L</span>
+						 <span class='w7'>I</span>
+						 <span class='w8'>S</span>
+						 <span class='w9'>H</span>
+						 <span class='w10'>M</span>
+						 <span class='w11'>E</span>
+						 <span class='w12'>N</span>
+						 <span class='w13'>T</span>
+						 <span class='w14'>S</span>
+				  </li>
+	</form>
+	<form class="learning" action="learning.html">
+	  <input type="image" src="memoji4.png" alt="Submit" width="250" height="250">
+	  <li id='Learning'>
+						 <span class='w0'>L</span>
+						 <span class='w1'>E</span>
+						 <span class='w2'>A</span>
+						 <span class='w3'>R</span>
+						 <span class='w4'>N</span>
+						 <span class='w5'>I</span>
+						 <span class='w6'>N</span>
+						 <span class='w7'>G</span>
+				  </li>
+	</form>
+	<form class="photo" action="photo.html">
+	  <input type="image" src="memoji5.png" alt="Submit" width="250" height="250">
+	  <li id='Photo'>
+						 <span class='w0'>P</span>
+						 <span class='w1'>H</span>
+						 <span class='w2'>O</span>
+						 <span class='w3'>T</span>
+						 <span class='w4'>O</span>
+				  </li>
+	</form>
+	<form class="birth" action="Birth.html">
+	  <input type="image" src="memoji6.png" alt="Submit" width="250" height="250">
+	  <li id='Birth'>
+						 <span class='w0'>B</span>
+						 <span class='w1'>I</span>
+						 <span class='w2'>R</span>
+						 <span class='w3'>T</span>
+						 <span class='w4'>H</span>
+				  </li>
+	</form>
+	<h1>Welcome to Xyquirreah Fairley life!</h1>
+	<p>Click on any attribute.</p>
+	<img src="image.jpg" alt="photo" style="width:350px">
+	<!-- <img src="gif1.gif" alt="photo" style="width:125px"> -->
+	</body>
+	</html>
