--- a/Acc.html
+++ b/Acc.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
+<!--darkest soft orange : #dd7d3b;
+	darker soft orange: #e8a87c;
+	soft orange: #f3d3bd;
+	
+	-->
 <html>
 
 <head>
 <title>Xyquirreah Fairley</title>
 </head>
 <style>
-body {
-  background-color: #41B3A3;
-  text-align: center;
-  color:  white;
-}
-a {
+<!-- a {
   text-decoration: none;
   display: inline-block;
   padding: 8px 16px;
@@ -21,7 +21,7 @@ a {
 a:hover {
   background-color: black;
   color: white;
-}
+}--> 
 .previous {
   background-color: white;
   color: black;
@@ -29,8 +29,761 @@ a:hover {
 .round {
   border-radius: 50%;
 }
+form {
+	color: white;
+	border-radius: 50%;
+	position: absolute;
+	right: 25px;
+	bottom: 50px;
+	padding: 20px ; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+}
+form:active {
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
+}
+form:hover{
+	background-color: #C38D9E;
+	border-radius: 50%;
+	height: 300px;
+	width: 300px;
+	opacity: 0.6;
+	opacity: 1;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 
+	0 17px 50px 0 rgba(0,0,0,0.19);
+}
+li {   
+	list-style: none;
+} 
+
+
+
+@import url("font.css");
+* {
+  outline: none;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html,
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  transition: 0.5s;
+  background: #E8A87C;
+  cursor: default;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: #edf5e1;
+  display: block;
+  transition-duration: 0.3s;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+h3 {
+  color: #05389b;
+  margin: 10px 0;
+  text-transform: lowercase;
+  font-size: 1.25em;
+}
+
+.resume {
+  width: 960px;
+  background: #379683;
+  color: #edf5e1;
+  margin: 20px auto;
+  box-shadow: 10px 10px #0e1442;
+  position: relative;
+  display: flex;
+}
+
+.resume .base,
+.resume .func {
+  box-sizing: border-box;
+  float: left;
+}
+
+.resume .base > div,
+.resume .func > div {
+  padding-bottom: 10px;
+}
+
+.resume .base > div:last-of-type,
+.resume .func > div:last-of-type {
+  padding-bottom: 0;
+}
+
+.resume .base {
+  width: 30%;
+  padding: 30px 15px;
+  background: #5cdb95;
+  color: #ffffff;
+}
+
+.resume .base .profile {
+  background: #003399;
+  padding: 30px 15px 40px 15px;
+  margin: -30px -15px 45px -15px;
+  position: relative;
+  z-index: 2;
+}
+
+.resume .base .profile::after {
+  content: "";
+  position: absolute;
+  background: #8ee4af;
+  width: 100%;
+  height: 30px;
+  bottom: -15px;
+  left: 0;
+  -webkit-transform: skewY(-5deg);
+          transform: skewY(-5deg);
+  z-index: -1;
+}
+
+.resume .base .profile .photo img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.resume .base .profile .photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.resume .base .profile .info {
+  text-align: center;
+  color: #ffffff;
+}
+
+.resume .base .profile .info .name {
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 1.75em;
+  text-transform: lowercase;
+  color: #379683;
+}
+
+.resume .base .profile .info .job {
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 1.5em;
+  text-transform: lowercase;
+  color: #5cdb95;
+}
+
+.resume .base .contact div {
+  line-height: 24px;
+}
+
+.resume .base .contact div a:hover {
+  color: #05386b;
+}
+
+.resume .base .contact div a:hover span::after {
+  width: 100%;
+}
+
+.resume .base .contact div:hover i {
+  color: #05386b;
+}
+
+.resume .base .contact div i {
+  color: #003399;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  text-align: center;
+  margin-right: 15px;
+  transition-duration: 0.3s;
+}
+
+.resume .base .contact div span {
+  position: relative;
+}
+
+.resume .base .contact div span::after {
+  content: "";
+  position: absolute;
+  background: #05386b;
+  height: 1px;
+  width: 0;
+  bottom: 0;
+  left: 0;
+  transition-duration: 0.3s;
+}
+
+.resume .base .follow .box {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.resume .base .follow .box a {
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+
+.resume .base .follow .box a:hover i {
+  background: #05386b;
+  border-radius: 5px;
+  -webkit-transform: rotate(45deg) scale(0.8);
+          transform: rotate(45deg) scale(0.8);
+}
+
+.resume .base .follow .box a:hover i::before {
+  -webkit-transform: rotate(-45deg) scale(1.5);
+          transform: rotate(-45deg) scale(1.5);
+}
+
+.resume .base .follow .box i {
+  display: inline-block;
+  font-size: 30px;
+  background: #003399;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  line-height: 60px;
+  color: #5cdb95;
+  margin: 0 10px 10px 10px;
+  transition-duration: 1s;
+}
+
+.resume .base .follow .box i::before {
+  transition-duration: 1s;
+}
+
+.resume .base .follow .box i.fa::before {
+  display: block;
+}
+
+.resume .func {
+  width: 100%;
+  padding: 30px;
+}
+
+.resume .func:hover > div {
+  transition-duration: 0.5s;
+}
+
+.resume .func:hover > div:hover h3 i {
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25);
+}
+
+.resume .func:hover > div:not(:hover) {
+  opacity: 0.5;
+}
+
+.resume .func h3 {
+  transition-duration: 0.3s;
+  margin-top: 0;
+}
+
+.resume .func h3 i {
+  color: #5cdb95;
+  background: #003399;
+  width: 42px;
+  height: 42px;
+  font-size: 20px;
+  line-height: 42px;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
+  margin-right: 8px;
+  transition-duration: 0.3s;
+}
+
+.resume .func .work,
+.resume .func .edu {
+  float: left;
+}
+
+.resume .func .work small,
+.resume .func .edu small {
+  display: block;
+  opacity: 0.7;
+}
+
+.resume .func .work ul li,
+.resume .func .edu ul li {
+  position: relative;
+  margin-left: 15px;
+  padding-left: 25px;
+  padding-bottom: 15px;
+}
+
+.resume .func .work ul li:hover::before,
+.resume .func .edu ul li:hover::before {
+  -webkit-animation: circle 1.2s infinite;
+          animation: circle 1.2s infinite;
+}
+
+.resume .func .work ul li:hover span,
+.resume .func .edu ul li:hover span {
+  color: #05386b;
+}
+
+@-webkit-keyframes circle {
+  from {
+    box-shadow: 0 0 0 0px #05386b;
+  }
+  to {
+    box-shadow: 0 0 0 6px rgba(255, 255, 255, 0);
+  }
+}
+
+@keyframes circle {
+  from {
+    box-shadow: 0 0 0 0px #05386b;
+  }
+  to {
+    box-shadow: 0 0 0 6px rgba(255, 255, 255, 0);
+  }
+}
+.resume .func .work ul li:first-of-type::before,
+.resume .func .edu ul li:first-of-type::before {
+  width: 10px;
+  height: 10px;
+  left: 1px;
+}
+
+.resume .func .work ul li:last-of-type,
+.resume .func .edu ul li:last-of-type {
+  padding-bottom: 3px;
+}
+
+.resume .func .work ul li:last-of-type::after,
+.resume .func .edu ul li:last-of-type::after {
+  border-radius: 1.5px;
+}
+
+.resume .func .work ul li::before,
+.resume .func .work ul li::after,
+.resume .func .edu ul li::before,
+.resume .func .edu ul li::after {
+  content: "";
+  display: block;
+  position: absolute;
+}
+
+.resume .func .work ul li::before,
+.resume .func .edu ul li::before {
+  width: 7px;
+  height: 7px;
+  border: 3px solid #ffffff;
+  background: #003399;
+  border-radius: 50%;
+  left: 3px;
+  z-index: 1;
+}
+
+.resume .func .work ul li::after,
+.resume .func .edu ul li::after {
+  width: 3px;
+  height: 100%;
+  background: #ffffff;
+  left: 5px;
+  top: 0;
+}
+
+.resume .func .work ul li span,
+.resume .func .edu ul li span {
+  transition-duration: 0.3s;
+}
+
+.resume .func .work {
+  width: 48%;
+  background: #5cdb95;
+  padding: 15px;
+  margin: 0 4% 15px 0;
+}
+
+.resume .func .edu {
+  width: 48%;
+  background: #5cdb95;
+  padding: 15px;
+}
+
+.resume .func .skills-prog {
+  clear: both;
+  background: #5cdb95;
+  padding: 15px;
+}
+
+.resume .func .skills-prog ul {
+  margin-left: 15px;
+}
+
+.resume .func .skills-prog ul li {
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+  transition-duration: 0.3s;
+}
+
+.resume .func .skills-prog ul li:hover {
+  color: #05386b;
+}
+
+.resume .func .skills-prog ul li:hover .skills-bar .bar {
+  background: #05386b;
+  box-shadow: 0 0 0 1px #05386b;
+}
+
+.resume .func .skills-prog ul li span {
+  display: block;
+  width: 120px;
+}
+
+.resume .func .skills-prog ul li .skills-bar {
+  background: #ffffff;
+  height: 2px;
+  width: calc(100% - 120px);
+  position: relative;
+  border-radius: 2px;
+}
+
+.resume .func .skills-prog ul li .skills-bar .bar {
+  position: absolute;
+  top: -1px;
+  height: 4px;
+  background: #003399;
+  box-shadow: 0 0 0 #003399;
+  border-radius: 5px;
+}
+
+.resume .func .skills-soft {
+  clear: both;
+  background: #5cdb95;
+  padding: 15px;
+  margin: 15px 0 0;
+}
+
+.resume .func .skills-soft ul {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.resume .func .skills-soft ul li {
+  position: relative;
+}
+
+.resume .func .skills-soft ul li:hover svg .cbar {
+  stroke: #05386b;
+  stroke-width: 4px;
+}
+
+.resume .func .skills-soft ul li:hover span,
+.resume .func .skills-soft ul li:hover small {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.resume .func .skills-soft ul li svg {
+  width: 95%;
+  fill: transparent;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+
+.resume .func .skills-soft ul li svg circle {
+  stroke-width: 1px;
+  stroke: #ffffff;
+}
+
+.resume .func .skills-soft ul li svg .cbar {
+  stroke-width: 3px;
+  stroke: #003399;
+  stroke-linecap: round;
+}
+
+.resume .func .skills-soft ul li span,
+.resume .func .skills-soft ul li small {
+  position: absolute;
+  display: block;
+  width: 100%;
+  top: 52%;
+  transition-duration: 0.3s;
+}
+
+.resume .func .skills-soft ul li span {
+  top: 40%;
+}
+
+.resume .func .interests {
+  background: #5cdb95;
+  margin: 15px 0 0;
+  padding: 15px;
+}
+
+.resume .func .interests-items {
+  box-sizing: border-box;
+  padding: 0 0 15px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.resume .func .interests-items div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.resume .func .interests-items div:hover i {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.resume .func .interests-items div:hover span {
+  color: #05386b;
+  transition-duration: 0.3s;
+}
+
+.resume .func .interests-items div i {
+  font-size: 45px;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  color: #003399;
+  transition-duration: 0.3s;
+}
+
+.resume .func .interests-items div span {
+  display: block;
+}
 </style>
+
 <body>
-<a href="file:///H:/User%20Interface%20Design/iProject.html" class="previous round">&#8249;</a>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="resume">
+  <div class="base">
+    <div class="profile">
+      <div class="photo">
+        <img src="image.jpg" />
+      </div>
+      <div class="info">
+        <h1 class="name">Xyquirreah Fairley</h1>
+        <h2 class="job"> Full Time Student</h2>
+      </div>
+    </div>
+    <div class="about">
+      <h3>About Me</h3>
+	  <p>I'm a current student at Faulkner University. I major in Computer Information System, improving in coding and troubleshooting.</p>
+	</div>
+    <div class="contact">
+      <h3>Contact Me</h3>
+      <div class="call"><a href="tel:251-447-1600"><i class="fa fa-phone"></i><span>123-456-7890</span></a></div>
+      <div class="address"><a href="https://goo.gl/maps/SqEDwCLMmcgqL5hP7"><i class="fa fa-map-marker"></i><span>Mobile, AL</span></a></div>
+      <div class="email"><a href="Xyquirreah.Fairley@Fauklner.edu"><i class="fa fa-envelope"></i><span>Xyquirreah Fairley</span></a></div>
+      <div class="website"><a href="iProject.html" target="_blank"><i class="fa fa-home"></i><span>XyquirreahFairley.me</span></a></div>
+    </div>
+	<br>
+    <div class="follow">
+      <h3>Follow Me</h3>
+      <div class="box">
+        <a href="https://www.facebook.com/Xfairleyy" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.instagram.com/pvpi_x/" target="_blank"><i class="fa fa-instagram "></i></a>
+        <a href="https://github.com/Xfairley717141" target="_blank"><i class="fa fa-github"></i></a>
+		<a href="https://www.linkedin.com/in/xyquirreah-fairley-70b48b171/" target="_blank"><i class="fa fa-linkedin"></i></a>
+      </div>
+    </div>
+  </div>
+  <div class="func">
+    <div class="work">
+      <h3><i class="fa fa-briefcase"></i>Experience</h3>
+      <ul>
+        <li><span>Regal -<br>Floor Staff</span><small>Mobile, AL</small><small>July 2017 - Now</small></li>
+      </ul>
+    </div>
+    <div class="edu">
+      <h3><i class="fa fa-graduation-cap"></i>Education</h3>
+      <ul>
+        <li><span>Computer Science</span><small>Faulkner University</small><small>August. 2017 - May. 2021</small></li>
+        <li><span>High School</span><small>Theodore High School</small><small>Aug. 2016 - May. 2017</small></li>
+      </ul>
+    </div>
+    <div class="skills-prog">
+      <h3><i class="fa fa-code"></i>Programming Languages</h3>
+      <ul>
+        <li data-percent="75"><span>HTML</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="55"><span>CSS</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="35"><span>JavaScript</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="85"><span>Java</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="85"><span>C#</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="35"><span>JQuery</span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+        <li data-percent="40"><span></span>
+          <div class="skills-bar">
+            <div class="bar"></div>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div class="skills-soft">
+      <h3><i class="fa fa-bezier-curve"></i>Certificate</h3>
+      <ul>
+        <li data-percent="90">
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg><span>Microsoft Technology Associate : Networking Fundamentals</span><small></small>
+        </li>
+        <li data-percent="75">
+          <svg viewbox="0 0 100 100">
+            <circle cx="50" cy="50" r="45"></circle>
+            <circle class="cbar" cx="50" cy="50" r="45"></circle>
+          </svg><span>Certificate of Achievement: Codepath Android Development </span><small></small>
+        </li>
+      </ul>
+    </div>
+    <div class="interests">
+      <h3><i class="fa fa-star"></i>Interests</h3>
+      <div class="interests-items">
+        <div class="sport"><i class="fa fa-ball"></i><span>Sports</span></div>
+        <div class="art"><i class="fa fa-book"></i><span>Books</span></div>
+        <div class="movies"><i class="fa fa-film"></i><span>Movies</span></div>
+        <div class="music"><i class="fa fa-headphones"></i><span>Music</span></div>
+        <div class="games"><i class="fa fa-gamepad"></i><span>Games</span></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<a href="iProject.html" class="previous round">&#8249;</a>
+<form class="learning" action="learning.html">
+  <input type="image" src="memoji4.png" alt="Submit" width="250" height="250">
+  <li id='Learning'>
+                     <span class='w0'>L</span>
+					 <span class='w1'>E</span>
+					 <span class='w2'>A</span>
+					 <span class='w3'>R</span>
+					 <span class='w4'>N</span>
+					 <span class='w5'>I</span>
+					 <span class='w6'>N</span>
+					 <span class='w7'>G</span>
+              </li>
+</form>
+
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script>
+		(function() {
+		  $(".skills-prog li")
+			.find(".skills-bar")
+			.each(function(i) {
+			  $(this)
+				.find(".bar")
+				.delay(i * 150)
+				.animate(
+				  {
+					width:
+					  $(this)
+						.parents()
+						.attr("data-percent") + "%"
+				  },
+				  1000,
+				  "linear",
+				  function() {
+					return $(this).css({
+					  "transition-duration": ".5s"
+					});
+				  }
+				);
+			});
+
+		  $(".skills-soft li")
+			.find("svg")
+			.each(function(i) {
+			  var c, cbar, circle, percent, r;
+			  circle = $(this).children(".cbar");
+			  r = circle.attr("r");
+			  c = Math.PI * (r * 2);
+			  percent = $(this)
+				.parent()
+				.data("percent");
+			  cbar = (100 - percent) / 100 * c;
+			  circle.css({
+				"stroke-dashoffset": c,
+				"stroke-dasharray": c
+			  });
+			  circle.delay(i * 150).animate(
+				{
+				  strokeDashoffset: cbar
+				},
+				1000,
+				"linear",
+				function() {
+				  return circle.css({
+					"transition-duration": ".3s"
+				  });
+				}
+			  );
+			  $(this)
+				.siblings("small")
+				.prop("Counter", 0)
+				.delay(i * 150)
+				.animate(
+				  {
+					Counter: percent
+				  },
+				  {
+					duration: 1000,
+					step: function(now) {
+					  return $(this).text(Math.ceil(now) + "%");
+					}
+				  }
+				);
+			});
+}.call(this))
+</script>
 </html>
