--- a/learning.html
+++ b/learning.html
@@ -11,18 +11,12 @@ body {
   color:  white;
 }
 a {
-	background-color:#C38D9E;
-	color: white;
-	padding: 32px 16px;
-  text-align: center;
-	text-decoration: none;
-	display: inline-block;
-		font-size: 16px;
-	position: absolute;
-	left: 25px;
-	bottom: 50px;
-	margin: 4px 2px;
-  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+  position: absolute;
+  left: 25px;
+  bottom: 50px;
 }
 a:hover {
   background-color: black;
@@ -35,15 +29,60 @@ a:hover {
 .round {
   border-radius: 50%;
 }
-.accomp{
+form {
+	color: white;
 	border-radius: 50%;
 	position: absolute;
-	left: 25px;
+	right: 25px;
 	bottom: 50px;
+	padding: 20px ; 
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
 }
+form:active {
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
+}
+form:hover{
+	background-color: #C38D9E;
+	border-radius: 50%;
+	height: 300px;
+	width: 300px;
+	opacity: 0.6;
+	opacity: 1;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 
+	0 17px 50px 0 rgba(0,0,0,0.19);
+}
+li {   
+	list-style: none;
+} 
 </style>
 <body>
-<a href="file:///H:/User%20Interface%20Design/Acc.html" class="button accomp" >Accomplishments</a>
-<a href="file:///H:/User%20Interface%20Design/iProject.html" class="previous round">&#8249;</a>
+<a href="iProject.html" class="previous round">&#8249;</a>
+
+<form class="accomp" action="Acc.html">
+  <input type="image" src="memoji3.png" alt="Submit" width="250" height="250">
+  <li id='Accomplishments'>
+                     <span class='w0'>A</span>
+					 <span class='w1'>C</span>
+					 <span class='w2'>C</span>
+					 <span class='w3'>O</span>
+					 <span class='w4'>M</span>
+					 <span class='w5'>P</span>
+					 <span class='w6'>L</span>
+					 <span class='w7'>I</span>
+					 <span class='w8'>S</span>
+					 <span class='w9'>H</span>
+					 <span class='w10'>M</span>
+					 <span class='w11'>E</span>
+					 <span class='w12'>N</span>
+					 <span class='w13'>T</span>
+					 <span class='w14'>S</span>
+              </li>
+</form>
 </body>
 </html>
